Fixed overflow

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body{
         grid-row: 1;
         grid-column: 1;
         min-height: 40vh;
-        height: auto;
+        height: 40vh;
         object-fit: cover;
     }
 }
@@ -149,7 +149,7 @@ transparent black text box over it, with the upper margin being the same percent
     }
     .footer{
         align-items: center;
-        padding-left: 35%;
+        text-align: center;
     }
 }
 
